--- a/codesquare/src/main/resources/templates/lecture/lecture.html
+++ b/codesquare/src/main/resources/templates/lecture/lecture.html
@@ -5,6 +5,9 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="utf-8" />
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+<!-- default header name is X-CSRF-TOKEN -->
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
 <link rel="stylesheet" type="text/css"
 	th:href="@{/static/styles/lecture/lectureCustom.css}">
 </head>
