bookmark 아코디언 부분 충돌하던 증상 수정

--- a/codesquare/src/main/resources/templates/planner/dashboard.html
+++ b/codesquare/src/main/resources/templates/planner/dashboard.html
@@ -79,12 +79,13 @@
 /* 					traditional : true,
  */					success: function (data) {
                         $(this).css('background-color', 'red');
-                        console.log("########여기는?##########");
+                        console.log("##### Ajax SUCCESS #######");
                         console.log(this);
+                        console.log(data);
                         console.log(event);
                     },
                     error: function (jqXHR, textStatus, errorThrown) {
-                        console.log("에러 발생~" + textStatus + " : " + errorThrown);
+                        console.log("##### Ajax ERROR #######");
                     }
                 });
             });
