--- a/codesquare/src/main/resources/templates/planner/myPlanner.html
+++ b/codesquare/src/main/resources/templates/planner/myPlanner.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/plannerLayout}"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
 <head>
 <title>Dashboard</title>
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+<!— default header name is X-CSRF-TOKEN —>
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
 <link rel="stylesheet" type="text/css" th:href="@{/static/styles/planner/dashboard.css}">
 <script type="text/javascript" th:inline="javascript">
 
@@ -18,8 +20,6 @@ $(function(){
 		});
 	});
 	
-	
-
 	    $(".nav-custom-tabs a").click(function () {
 	        $(this).tab('show');
 	    });//탭 클릭 이벤트
@@ -30,20 +30,16 @@ $(function(){
 	   });//탭 클릭 이벤트
 	   
 	   $(".todo-li input").change(function () {
-			 console.log("체인지체인지체인지");
 			 $("form").submit();
 			 console.log("체인지체인지체인지후후후후");
-/* 			 $(this).attr("contentEditable",true); */
-		   });//탭 클릭 이벤트
+		   });
 		   
-	   
         var bookmarkListObj = /*[[${bookmarkList}]]*/;
-         var JSONallSchedule = JSON.stringify(bookmarkListObj);
+        var JSONallSchedule = JSON.stringify(bookmarkListObj);
         
         
         $(function () {
             $("#testtest").click(function () {
-                console.log(JSONallSchedule);
                 $.ajax({
                     type: 'post',
                     url: '/test',
@@ -52,12 +48,14 @@ $(function(){
                     contentType: 'application/json; charset=UTF-8',
     /* 					traditional : true,
     */					success: function (data) {
-                        $("#testtest").css('background-color', 'red');
-                        console.log("########성공?##########");
-                        console.log(event.target);
+                        $("#testtest").html(data);
+                        console.log("##### Ajax SUCCESS #######");
+                        console.log(this);
+                        console.log(data);
+                        console.log(event);
                     },
                     error: function (jqXHR, textStatus, errorThrown) {
-                        console.log("에러 발생~" + textStatus + " : " + errorThrown);
+                        console.log("##### Ajax ERROR #######");
                     }
                 });
             });
@@ -86,13 +84,13 @@ $(function(){
             <div class="card" th:each=" list, status : ${groupWorkList}">
                 <div class="card-header" th:id="|heading${status.index}|">
                     <div class="mb-0 grpWkGrid">
-                        <a th:text="${list.groupId}" href="#"></a> <a th:class="${status.index eq 0?'':' collapsed'}"
+                        <a th:text="${list.groupId}" href="#"></a> <a th:class="${status.first?'':' collapsed'}"
                             data-toggle="collapse" th:data-target="|#grpWk${list.id}|" aria-expanded="true"
                             th:aria-controls="'grpWk'+${list.id}" th:text="${list.title}"> </a> <span class="writeDate"
                             th:text="${list.writeDateFormat}"></span>
                     </div>
                 </div>
-                <div th:id="|grpWk${list.id}|" th:class="|collapse${status.index eq 0?' show':''}|"
+                <div th:id="|grpWk${list.id}|" th:class="|collapse${status.first?' show':''}|"
                     th:aria-labelledby="|heading${status.index}|" data-parent="#accorionGroupWork">
                     <div class="card-body" th:text="${list.content}"></div>
                 </div>
@@ -114,16 +112,13 @@ $(function(){
             </ul>
             <!-- 오른쪽 컨텐츠 부분 -->
             <div class="tab-content custom-tab-content col-md-10">
-            
-            	<button id="testtest" type="button">쀼</button>
-            
-                 <div th:id="*{category.category}" th:class="|container tab-pane ${index.first?'active':'fade'}|" th:each="category,index : ${bookmarkKind}">
-                      <div class="accordion acc-custom" id="accorionBookmark">
+                  <div th:id="*{category.category}" th:class="|container tab-pane ${index.first?'active':'fade'}|" th:each="category,index : ${bookmarkKind}">
+                      <div class="accordion acc-custom" th:id="|accorionBookmark*{index.index}|">
                           <div class="card" th:each="list,status:${index.first?bookmarkList:bookmarkList.?[#strings.startsWith(boardKindId,'__${category.category}__')]}">
-                              <div class="card-header" th:id="|headingBL-*{status.index}|">
+                              <div class="card-header" th:id="|heading*{index.index}_BL*{status.index}|">
                                   <div class="mb-0 bookmarkGrid">
                                       <a th:text="*{list.boardName}" href="#"></a> <a th:text="*{list.title}"
-                                          th:class="*{status.index eq 0?'':'collapsed'}" data-toggle="collapse"
+                                          th:class="*{status.first?'':'collapsed'}" data-toggle="collapse"
                                           th:data-target="|#bookmark*{list.id}|" aria-expanded="true"
                                           th:aria-controls="|bookmark*{list.id}|">
                                       </a>
@@ -134,13 +129,13 @@ $(function(){
                                   </div>
                               </div>
                               <div th:id="|bookmark*{list.id}|"
-                                  th:class="|collapse${status.index eq 0?' show':''}|"
-                                  th:aria-labelledby="|headingBL-*{status.index}|" data-parent="#accorionBookmark">
+                                  th:class="|collapse${status.first?' show':''}|"
+                                  th:aria-labelledby="|heading*{index.index}_BL*{status.index}|" th:data-parent="|#accorionBookmark*{index.index}|">
                                   <div class="card-body" th:text="*{list.content}"></div>
                               </div>
                           </div>
                       </div>
-                </div>
+                </div> 
                 
                 
                 
