--- a/codesquare/src/main/resources/templates/fragments/header.html
+++ b/codesquare/src/main/resources/templates/fragments/header.html
@@ -68,7 +68,9 @@
 
 			<div sec:authorize="isAuthenticated()">
 				<ul>
-					<li><span id="headerNickName" th:text="${session.nickName}"></span> 님! 안녕하세요.</li>
+					
+					<li> <img th:src="@{'/static/codesquareDB/UserThumbnail/'+${session.userId}+'/'+${session.userId}+'_Thumbnail.jpg'}"
+									id="profileImg" style="width: 20px; height: 20px" /> <span id="headerNickName" th:text="${session.nickName}"></span> 님! 안녕하세요.</li>
 					<li><a th:href="@{/member/myPage}">마이페이지</a></li>
 					<li><a th:href="@{/logout}">로그아웃</a></li>
 
