룸 예약 커밋

--- a/codesquare/src/main/resources/templates/room/roomView2.html
+++ b/codesquare/src/main/resources/templates/room/roomView2.html
@@ -106,8 +106,8 @@
 				<option value="4">4시간</option>
 				<option value="5">5시간</option>
 				<option value="6">6시간</option>
-				<option value="7"  disabled="disabled">7시간</option>
-				<option value="8" disabled="disabled">8시간</option>
+				<option value="7">7시간</option>
+				<option value="8">8시간</option>
 				<option value="9">9시간</option>
 				<option value="10">10시간</option>
 				</select>
