--- a/codesquare/src/main/resources/templates/room/companyList.html
+++ b/codesquare/src/main/resources/templates/room/companyList.html
@@ -10,7 +10,6 @@ layout:decorator="layout/mainLayout">
 <link href="static/styles/room/datepicker.min.css" rel="stylesheet" type="text/css">
 <script src="static/js/room/datepicker.min.js"></script>
 <script src="static/js/room/i18n/datepicker.en.js"></script>
-
   <style type="text/css">
   input {
   border: 1px solid #542672;
@@ -78,7 +77,7 @@ layout:decorator="layout/mainLayout">
                 <a th:href="@{'/getid?companyid=' + ${Company.id}}"><img data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap"></a>
                 <div class="card-body">
      			<a th:href="@{'/getid?companyid=' + ${Company.id}}"><p th:text="${Company.companyname}"></p></a>
-                  <p class="card-text"><span th:text="${Company.companyinfo}"></span></p>
+                  <p class="card-text"><!-- <span th:text="${Company.companyinfo}"></span></p> -->
                   						<span th:text="${Company.address}"></span>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
