--- a/codesquare/src/main/resources/templates/lecture/lectureModifyPage.html
+++ b/codesquare/src/main/resources/templates/lecture/lectureModifyPage.html
@@ -10,22 +10,24 @@
 </th:block> 
 
 </head>
-<body id="write-page"><!-- BoardKindId,UserId,Nickname,Title,Content,ParentId -->
+<body id="modify-page"><!-- BoardKindId,UserId,Nickname,Title,Content,ParentId -->
 	<div class="container" layout:fragment="content">
 		<div class="lecture-write-container">
 			<form name="lectureResgistForm">
 				<div class="col-sm-12 lecture-title">
+					<input type="hidden" name="id" th:value="@{${lecture.id}}">
 					<input type="hidden" name="boardKindId" value="LrnVo">
-					<input type="hidden" name="Nickname" th:value="@{${session.nickName}}">
+					<input type="hidden" name="nickname" th:value="@{${session.nickName}}">
 					<input type="hidden" name="userId" th:value="@{${session.userId}}">
-					<input type="hidden" name="parentId" th:value="@{${lecture.id}}">
+					<input type="hidden" name="parentId" th:value="@{${lecture.parentId}}">
 					
-					<input type="text" name="title" placeholder="제목을 입력해 주세요"	style="background: #F2F2F2; border: 2px solid gray; margin: 5px 0 5px 0"value="" >
+					<input type="text" value="자바의정석" readonly>
+					<input type="text" name="title" placeholder="제목을 입력해 주세요"	style="background: #F2F2F2; border: 2px solid gray; margin: 5px 0 5px 0"value=""  th:value="@{${lecture.title}}">
 				</div>
-				<div class="col-sm-12 lecture-thumbnail" ondrop="drop(event)" ondragover="allowDrop(event)">
-				<div id="player" class="col-sm-12 " style="display:none" data-videoId="none" th:attr="data-modify-videoId=''"></div>
-					<i class=" fas fa-image  fa-lg" style="font-size: 100px;"></i> <span>
-						<h5>강의 썸네일을 등록해 주세요.</h5>
+				<div class="col-sm-12 lecture-video" ondrop="drop(event)" ondragover="allowDrop(event)">
+				<div id="player" class="col-sm-12 " style="display:none" data-videoId="none" th:attr="data-modify-videoId=${lecture.videoUrl}"></div>
+					<i class="fab fa-youtube  fa-lg" style="font-size:100px;"></i><span>
+						<h5>강의 주소를 입력해 주세요.</h5>
 						<br> <span>
 						<input type="url" id="url"  placeholder="https://example.com"  pattern="https://.*" size="30"  required>
 						<button type="button" id="btn-video-regist" class="btn btn-secondary btn-block">등록</button>
@@ -35,19 +37,19 @@
 				</div>
 				<div class="col-sm-12 video-change-box"></div>
 				<div class="col-sm-12 lecture-content">
-					<textarea name="content" id="content" style="width: 100%; height: 412px; min-width: 610px; overflow: visible;"	rows="25" ></textarea>
+					<textarea name="content" id="content" style="width: 100%; height: 412px; min-width: 610px; overflow: visible;"	rows="25" th:utext="@{${lecture.content}}"></textarea>
 				</div>
 				<div class="d-flex lecture-btn-container">
 					<button type="button" class="btn-lecture-cancel p-2 flex-fill btn btn-secondary btn-lg"
 						style="margin-right: 1px;">취소</button>
-					<button th:if="${parentId}" type="button" class="btn-lecture-regist p-2 flex-fill btn btn-secondary btn-lg">등록</button>
-					<button th:unless="${parentId}" type="button" class="btn-lecture-modify p-2 flex-fill btn btn-secondary btn-lg">수정</button>
+					<button type="button" class="btn-lecture-modify p-2 flex-fill btn btn-secondary btn-lg">수정</button>
 				</div>
 			</form>
 		</div>
 
 		<th:block layout:fragment="script">
 			<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
+			<script src="https://www.youtube.com/player_api"></script>
 			<script type="text/javascript"	th:src="@{/static/js/smarteditor2/dist/js/service/HuskyEZCreator.js}"></script>
 			<script type="text/javascript"	th:src="@{/static/js/Lecture/LectureWriteCustom.js}"></script>
 		</th:block>
